--- a/style/style.css
+++ b/style/style.css
@@ -75,6 +75,7 @@ header nav a:hover{
 
     padding: 15px;
     margin-right: 15px;
+    margin-bottom: 5px;
     font-size: 12px;
 
     cursor: pointer;
@@ -84,6 +85,15 @@ header nav a:hover{
 .botao:hover{
     background-color: white;
     color: black;
+}
+
+.container{
+    margin-left: 20px;
+    margin-right: 20px;
+}
+
+.filme-principal .container{
+    width: 60%;
 }
 
 i{
