--- a/style/style.css
+++ b/style/style.css
@@ -12,7 +12,7 @@
 /*elementos base*/
 body {
     background-color: var(--preto);
-    font-family: 'Times New Roman', Times, serif;
+    font-family: 'Arial', Times, serif;
     color: white;
     
 }
@@ -75,7 +75,7 @@ header nav a:hover{
 
     padding: 15px;
     margin-right: 15px;
-    margin-bottom: 5px;
+    
     font-size: 12px;
 
     cursor: pointer;
@@ -104,4 +104,7 @@ i{
     height: 100%;
     width: 100%;
     display: block;
+}
+.carrosel-filmes{
+    margin-top: 5px;
 }
